--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Ankush Chadda's HomeSite</title>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 	 <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -12,8 +13,18 @@
 </head>
 <body>
 	<div class="container">
-		<div class="page-header text-center"><h1>Ankush Chadda</h1></div>
-		<div class="row">
+		<div class="page-header text-center">
+			<h1>Ankush Chadda</h1>
+			<div class="row">
+				<button class="btn btn-default">
+					<i class="fa fa-github"></i>
+				</button>
+				<button class="btn btn-default">
+					<i class="fa fa-stack-overflow"></i>
+				</button>
+			</div>
+		</div>
+		
 		</div>
 	</div>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
