--- a/index.html
+++ b/index.html
@@ -11,21 +11,28 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
+<body >
 	<div class="container">
 		<div class="page-header text-center">
 			<h1>Ankush Chadda</h1>
 			<div class="row">
 				<button class="btn btn-default">
-					<i class="fa fa-github"></i>
+					<a href="https://github.com/iamkhush"><i class="fa fa-github fa-2x"></i></a>
 				</button>
 				<button class="btn btn-default">
-					<i class="fa fa-stack-overflow"></i>
+					<a href="http://stackoverflow.com/users/808236/iamkhush"><i class="fa fa-stack-overflow fa-2x"></i></a>
 				</button>
+				<div class="col-md-6 col-md-offset-5" style="margin-top:10px;" role="navigation">
+					<ul class="nav nav-pills" >
+						<li class="active"><a href="#home" data-toggle="tab">Home</a></li>
+						<li><a href="#works" data-toggle="tab">Works</a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
-		
+		<div class="row">
 		</div>
+		
 	</div>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
