--- a/index.html
+++ b/index.html
@@ -6,23 +6,26 @@
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href='//fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
 	 <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body >
-	<div class="container">
-		<div class="page-header text-center">
-			<h1>Ankush Chadda</h1>
-			<div class="row">
+<body>
+	<header class="text-center" >
+		<div class="container">
+			<h1 style="font-size:4em;font-family: 'Rock Salt', cursive;">Ankush Chadda</h1>
+			<div class="row" style="margin-top:3.5em;">
 				<button class="btn btn-default">
 					<a href="https://github.com/iamkhush"><i class="fa fa-github fa-2x"></i></a>
 				</button>
 				<button class="btn btn-default">
 					<a href="http://stackoverflow.com/users/808236/iamkhush"><i class="fa fa-stack-overflow fa-2x"></i></a>
 				</button>
-				<div class="col-md-6 col-md-offset-5" style="margin-top:10px;" role="navigation">
+			</div>
+			<div class="row" style="text-align: center">
+				<div class="col-md-6 col-md-offset-5 col-sm-4 col-sm-offset-4 col-xs-7 col-xs-offset-4" style="margin-top:3.5em;margin-bottom:13px;" role="navigation">
 					<ul class="nav nav-pills" >
 						<li class="active"><a href="#home" data-toggle="tab">Home</a></li>
 						<li><a href="#works" data-toggle="tab">Works</a></li>
@@ -30,9 +33,40 @@
 				</div>
 			</div>
 		</div>
-		<div class="row">
+	</header>
+	<hr>
+	<div class="main" >
+		<div class="container">
+			<div class="row" id="home">
+				<div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2" style="font-size:1.3em;">
+					<p>Salut! My name is Ankush Chadda. Im 26 years old and living in Agra, India.</p>
+					<p>I am a Computer Science Enginnering Graduate from UIET, Kurukshetra University.
+						I work as a <strong>Freelance Web Developer</strong>.I have experience of providing end to end solutions, both on my own and in collaboration with a team.
+					</p>
+					<p>I believe web to be a powerful platform to collaborate and innovate, hence most of my work is web oriented. I currently work with the following technologies - 
+						<ul class="pager">
+							<li class="active"><a href="">Python</a></li>
+							<ul class="pager">
+								<li><a href="">Django</a></li>
+								<li><a href="">Flask</a></li>
+							</ul>
+							<li><a href="">Javascript</a></li>
+							<ul class="pager">
+								<li><a href="">Node.Js</a></li>
+								<li><a href="">Angular JS</a></li>
+								<li><a href="">BackBone JS</a></li>
+							</ul>
+							<li><a href="">Redis, MongoDb</a></li>
+							<li><a href="">Mysql, Postgres</a></li>
+							<li><a href="">Heroku</a></li>
+							<li><a href="">PhoneGap</a></li>
+						</ul>
+					</p>
+				</div>
+			</div>
+			<div class="row" id="works">
+			</div>
 		</div>
-		
 	</div>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
