--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Ankush Chadda's HomeSite</title>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="font-awesome-social.css">
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href='//fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
 	 <!--[if lt IE 9]>
@@ -16,7 +17,13 @@
 	<header class="text-center" >
 		<div class="container">
 			<h1 style="font-size:4em;font-family: 'Rock Salt', cursive;">Ankush Chadda</h1>
-			<div class="row" style="margin-top:3.5em;">
+			<div class="row" style="margin-top:3.5em">
+				<!-- <button class="btn btn-default">
+					<a href="https://plus.google.com/+AnkushChaddaIndia/"><i class="icon-blogger icon-large"></i></a>
+				</button>	 -->						
+				<button class="btn btn-default">
+					<a href="https://plus.google.com/+AnkushChaddaIndia/"><i class="fa fa-google-plus fa-2x"></i></a>
+				</button>				
 				<button class="btn btn-default">
 					<a href="https://github.com/iamkhush"><i class="fa fa-github fa-2x"></i></a>
 				</button>
@@ -72,43 +79,12 @@
       					<img src="artport.png" alt="...">
   						<div class="caption">
 					        <h3>Artport.me</h3>
-					        <p>...</p>
-					        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+					        <p>Find all artists in one place.</p>
+					        <p>Build using Python, Django</p>
+					        <p><a href="http://artport.me" class="btn btn-primary" role="button">Take me there</a> </p>
   						</div>
     				</div>
 				</div>
-				<div class="col-sm-6 col-md-4">
-					<div class="thumbnail">
-      					<img src="artport.png" alt="...">
-  						<div class="caption">
-					        <h3>Thumbnail label</h3>
-					        <p>...</p>
-					        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-  						</div>
-    				</div>
-				</div>
-				<div class="col-sm-6 col-md-4">
-					<div class="thumbnail">
-      					<img src="artport.png" alt="...">
-  						<div class="caption">
-					        <h3>Thumbnail label</h3>
-					        <p>...</p>
-					        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-  						</div>
-    				</div>
-				</div>
-				<div class="col-sm-6 col-md-4">
-					<div class="thumbnail">
-      					<img src="artport.png" alt="...">
-  						<div class="caption">
-					        <h3>Thumbnail label</h3>
-					        <p>...</p>
-					        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-  						</div>
-    				</div>
-				</div>
-
-
 			</div>	
 		</div>
 	</div>
