--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 			<div class="row" style="margin-top:3.5em">
 				<!-- <button class="btn btn-default">
 					<a href="https://plus.google.com/+AnkushChaddaIndia/"><i class="icon-blogger icon-large"></i></a>
-				</button>	 -->						
+				</button>	 -->
+				<button class="btn btn-default">
+					<a href="https://about.me/iamkhush"><p style="font-size: 1.8em;margin: -5px;">me</p></a>
+				</button>							
 				<button class="btn btn-default">
 					<a href="https://plus.google.com/+AnkushChaddaIndia/"><i class="fa fa-google-plus fa-2x"></i></a>
 				</button>				
@@ -76,12 +79,34 @@
 			<div class="row tab-pane fade" id="works" role="tabpanel">
 				<div class="col-sm-6 col-md-4">
 					<div class="thumbnail">
-      					<img src="artport.png" alt="...">
+      				<img src="artport.png" alt="...">
   						<div class="caption">
 					        <h3>Artport.me</h3>
 					        <p>Find all artists in one place.</p>
-					        <p>Build using Python, Django</p>
+					        <p>Built using Python, Django</p>
 					        <p><a href="http://artport.me" class="btn btn-primary" role="button">Take me there</a> </p>
+  						</div>
+    				</div>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<div class="thumbnail">
+      				<img src="aceprofinder.png" alt="...">
+  						<div class="caption">
+					        <h3>Aceprofinder.com</h3>
+					        <p>Helps Connects Contractors for Home Improvement Services</p>
+					        <p>Built using Python, Django</p>
+					        <p><a href="http://aceprofinder.com" class="btn btn-primary" role="button">Take me there</a> </p>
+  						</div>
+    				</div>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<div class="thumbnail">
+      				<img src="gplayer.png" alt="...">
+  						<div class="caption">
+					        <h3>Gplayer.fm</h3>
+					        <p>Listen to good music, make playlists and enjoy.</p>
+					        <p>Built using Python, Django, Backbone</p>
+					        <p><a href="http://gplayer.fm" class="btn btn-primary" role="button">Take me there</a> </p>
   						</div>
     				</div>
 				</div>
