--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+  <style type="text/css">
+  .pager-new li{
+  	margin: 5px;
+  }
+  </style>
 </head>
 <body>
 	<header class="text-center" >
@@ -54,24 +59,20 @@
 						I work as a <strong>Freelance Web Developer</strong>.I have experience of providing end to end solutions, both on my own and in collaboration with a team.
 					</p>
 					<p>I believe web to be a powerful platform to collaborate and innovate, hence most of my work is web oriented. I currently work with the following technologies - 
-						<ul class="pager">
-							<li class="active"><a href="">Python</a></li>
-							<ul class="pager">
-								<li><a href="">Django</a></li>
-								<li><a href="">Flask</a></li>
-							</ul>
-							<li><a href="">Javascript</a></li>
-							<ul class="pager">
-								<li><a href="">Node.Js</a></li>
-								<li><a href="">Angular JS</a></li>
-								<li><a href="">BackBone JS</a></li>
-							</ul>
-							<li><a href="">Redis</a></li>
-							<li><a href="">MongoDb</a></li>
-							<li><a href="">Mysql</a></li>
-							<li><a href="">Postgres</a></li>
-							<li><a href="">Heroku</a></li>
-							<li><a href="">PhoneGap</a></li>
+						<ul class="pager pager-new">
+							<li><a href="javascript:void(0);">Python</a></li>
+							<li><a href="javascript:void(0);">Django</a></li>
+							<li><a href="javascript:void(0);">Flask</a></li>
+							<li><a href="javascript:void(0);">Javascript</a></li>
+							<li><a href="javascript:void(0);">Node.Js</a></li>
+							<li><a href="javascript:void(0);">Angular JS</a></li>
+							<li><a href="javascript:void(0);">BackBone JS</a></li>
+							<li><a href="javascript:void(0);">Redis</a></li>
+							<li><a href="javascript:void(0);">MongoDb</a></li>
+							<li><a href="javascript:void(0);">Mysql</a></li>
+							<li><a href="javascript:void(0);">Postgres</a></li>
+							<li><a href="javascript:void(0);">Heroku</a></li>
+							<li><a href="javascript:void(0);">PhoneGap</a></li>
 						</ul>
 					</p>
 				</div>
