--- a/index.html
+++ b/index.html
@@ -26,18 +26,10 @@
 				<!-- <button class="btn btn-default">
 					<a href="https://plus.google.com/+AnkushChaddaIndia/"><i class="icon-blogger icon-large"></i></a>
 				</button>	 -->
-				<button class="btn btn-default">
-					<a href="https://about.me/iamkhush"><p style="font-size: 1.8em;margin: -5px;">me</p></a>
-				</button>							
-				<button class="btn btn-default">
-					<a href="https://plus.google.com/+AnkushChaddaIndia/"><i class="fa fa-google-plus fa-2x"></i></a>
-				</button>				
-				<button class="btn btn-default">
-					<a href="https://github.com/iamkhush"><i class="fa fa-github fa-2x"></i></a>
-				</button>
-				<button class="btn btn-default">
-					<a href="http://stackoverflow.com/users/808236/iamkhush"><i class="fa fa-stack-overflow fa-2x"></i></a>
-				</button>
+				<a href="https://about.me/iamkhush" class="btn btn-primary" target="_blank"><p style="font-size: 1.8em;margin: -5px;">me</p></a>				
+				<a href="https://plus.google.com/+AnkushChaddaIndia/" class="btn btn-primary" target="_blank"><i class="fa fa-google-plus fa-2x"></i></a>
+				<a href="https://github.com/iamkhush" target="_blank" class="btn btn-primary"><i class="fa fa-github fa-2x"></i></a>
+				<a href="http://stackoverflow.com/users/808236/iamkhush" class="btn btn-primary" target="_blank"><i class="fa fa-stack-overflow fa-2x"></i></a>
 			</div>
 			<div class="row" style="text-align: center">
 				<div class="col-md-6 col-md-offset-5 col-sm-4 col-sm-offset-4 col-xs-7 col-xs-offset-4" style="margin-top:3.5em;margin-bottom:13px;" role="navigation">
@@ -80,34 +72,34 @@
 			<div class="row tab-pane fade" id="works" role="tabpanel">
 				<div class="col-sm-6 col-md-4">
 					<div class="thumbnail">
-      				<img src="artport.png" alt="...">
+      				<img src="artport.png" alt="ArtPort">
   						<div class="caption">
 					        <h3>Artport.me</h3>
 					        <p>Find all artists in one place.</p>
 					        <p>Built using Python, Django</p>
-					        <p><a href="http://artport.me" class="btn btn-primary" role="button">Take me there</a> </p>
+					        <p><a href="http://artport.me" target="_blank" class="btn btn-primary" role="button">Take me there</a> </p>
   						</div>
     				</div>
 				</div>
 				<div class="col-sm-6 col-md-4">
 					<div class="thumbnail">
-      				<img src="aceprofinder.png" alt="...">
+      				<img src="aceprofinder.png" alt="Aceprofinder">
   						<div class="caption">
 					        <h3>Aceprofinder.com</h3>
 					        <p>Helps Connects Contractors for Home Improvement Services</p>
 					        <p>Built using Python, Django</p>
-					        <p><a href="http://aceprofinder.com" class="btn btn-primary" role="button">Take me there</a> </p>
+					        <p><a href="http://aceprofinder.com" target="_blank" class="btn btn-primary" role="button">Take me there</a> </p>
   						</div>
     				</div>
 				</div>
 				<div class="col-sm-6 col-md-4">
 					<div class="thumbnail">
-      				<img src="gplayer.png" alt="...">
+      				<img src="gplayer.png" alt="Gplayer">
   						<div class="caption">
 					        <h3>Gplayer.fm</h3>
 					        <p>Listen to good music, make playlists and enjoy.</p>
 					        <p>Built using Python, Django, Backbone</p>
-					        <p><a href="http://gplayer.fm" class="btn btn-primary" role="button">Take me there</a> </p>
+					        <p><a href="http://gplayer.fm" target="_blank" class="btn btn-primary" role="button">Take me there</a> </p>
   						</div>
     				</div>
 				</div>
