links changed n formatted

--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
 		<div class="container">
 			<h1 style="font-size:4em;font-family: 'Rock Salt', cursive;">Ankush Chadda</h1>
 			<div class="row" style="margin-top:3.5em">
-				<!-- <button class="btn btn-default">
-					<a href="https://plus.google.com/+AnkushChaddaIndia/"><i class="icon-blogger icon-large"></i></a>
-				</button>	 -->
+				<a href="http://iam-khush.blogspot.in" class="btn btn-primary" target="_blank" style="font-size: 1.4em;"><i class="icon-blogger icon-large"></i></a>
 				<a href="https://about.me/iamkhush" class="btn btn-primary" target="_blank"><p style="font-size: 1.8em;margin: -5px;">me</p></a>				
 				<a href="https://plus.google.com/+AnkushChaddaIndia/" class="btn btn-primary" target="_blank"><i class="fa fa-google-plus fa-2x"></i></a>
 				<a href="https://github.com/iamkhush" target="_blank" class="btn btn-primary"><i class="fa fa-github fa-2x"></i></a>
