--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   }
   </style>
 </head>
-<body>
+<body itemscope itemtype="http://schema.org/Person">
 	<header class="text-center" >
 		<div class="container">
-			<h1 style="font-size:4em;font-family: 'Rock Salt', cursive;">Ankush Chadda</h1>
+			<h1 style="font-size:4em;font-family: 'Rock Salt', cursive;" itemprop="name">Ankush Chadda</h1>
 			<div class="row" style="margin-top:3.5em">
 				<a href="http://iam-khush.blogspot.in" class="btn btn-primary" target="_blank" style="font-size: 1.4em;"><i class="icon-blogger icon-large"></i></a>
 				<a href="https://about.me/iamkhush" class="btn btn-primary" target="_blank"><p style="font-size: 1.8em;margin: -5px;">me</p></a>				
@@ -46,7 +46,7 @@
 				<div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2 tab-pane active fade in" role="tabpanel"  style="font-size:1.3em;">
 					<p>Salut! My name is Ankush Chadda. Im 26 years old and living in Agra, India.</p>
 					<p>I am a Computer Science Enginnering Graduate from UIET, Kurukshetra University.
-						I work as a <strong>Freelance Web Developer</strong>.I have experience of providing end to end solutions, both on my own and in collaboration with a team.
+						I work as a <strong itemprop="jobTitle">Freelance Web Developer</strong>.I have experience of providing end to end solutions, both on my own and in collaboration with a team.
 					</p>
 					<p>I believe web to be a powerful platform to collaborate and innovate, hence most of my work is web oriented. I currently work with the following technologies - 
 						<ul class="pager pager-new">
