added site description

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="This is Ankush Chadda's Homesite. You can find more about me and my works here." />
 	<title>Ankush Chadda's HomeSite</title>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
