--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 		<div class="container">
 			<h1 style="font-size:4em;font-family: 'Rock Salt', cursive;" itemprop="name">Ankush Chadda</h1>
 			<div class="row" style="margin-top:3.5em">
-				<a href="http://iam-khush.blogspot.in" class="btn btn-primary" target="_blank" style="font-size: 1.4em;"><i class="icon-blogger icon-large"></i></a>
-				<a href="https://about.me/iamkhush" class="btn btn-primary" target="_blank"><p style="font-size: 1.8em;margin: -5px;">me</p></a>				
-				<a href="https://plus.google.com/+AnkushChaddaIndia/" class="btn btn-primary" target="_blank"><i class="fa fa-google-plus fa-2x"></i></a>
-				<a href="https://github.com/iamkhush" target="_blank" class="btn btn-primary"><i class="fa fa-github fa-2x"></i></a>
-				<a href="http://stackoverflow.com/users/808236/iamkhush" class="btn btn-primary" target="_blank"><i class="fa fa-stack-overflow fa-2x"></i></a>
+				<a href="http://iam-khush.blogspot.in" alt='Blog' class="btn btn-primary" target="_blank" style="font-size: 1.4em;"><i class="icon-blogger icon-large"></i></a>
+				<a href="https://about.me/iamkhush" alt='about.me' class="btn btn-primary" target="_blank"><p style="font-size: 1.8em;margin: -5px;">me</p></a>				
+				<a href="https://plus.google.com/+AnkushChaddaIndia/" alt='Google Plus' class="btn btn-primary" target="_blank"><i class="fa fa-google-plus fa-2x"></i></a>
+				<a href="https://github.com/iamkhush" alt='Github' target="_blank" class="btn btn-primary"><i class="fa fa-github fa-2x"></i></a>
+				<a href="http://stackoverflow.com/users/808236/iamkhush" Github='Stackoverflow' class="btn btn-primary" target="_blank"><i class="fa fa-stack-overflow fa-2x"></i></a>
 			</div>
 			<div class="row" style="text-align: center">
 				<div class="col-md-6 col-md-offset-5 col-sm-4 col-sm-offset-4 col-xs-7 col-xs-offset-4" style="margin-top:3.5em;margin-bottom:13px;" role="navigation">
@@ -45,7 +45,7 @@
 		<div class="container tab-content">
 			<div class="row" id="home">
 				<div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2 tab-pane active fade in" role="tabpanel"  style="font-size:1.3em;">
-					<p>Salut! My name is Ankush Chadda. Im 26 years old and living in Agra, India.</p>
+					<p>Namaste! My name is Ankush Chadda. Im 26 years old and living in Agra, India.</p>
 					<p>I am a Computer Science Enginnering Graduate from UIET, Kurukshetra University.
 						I work as a <strong itemprop="jobTitle">Freelance Web Developer</strong>.I have experience of providing end to end solutions, both on my own and in collaboration with a team.
 					</p>
