--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 					<ul class="nav nav-pills" id="maintab">
 						<li role="presentation" class="active"><a href="#home" data-toggle="tab" aria-controls="home" role="tab">Home</a></li>
 						<li role="presentation"><a href="#works" data-toggle="tab"  aria-controls="works" role="tab">Works</a></li>
+						<li role="presentation"><a href="#contactus" data-toggle="tab"  aria-controls="contactus" role="tab">Contact Us</a></li>
 					</ul>
 				</div>
 			</div>
@@ -46,9 +47,9 @@
 		<div class="container tab-content">
 			<div class="row" id="home">
 				<div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2 tab-pane active fade in" role="tabpanel"  style="font-size:1.3em;">
-					<p>Namaste! My name is Ankush Chadda. Im 26 years old and living in Agra, India.</p>
+					<p>Namaste! My name is Ankush Chadda. from Agra, India.</p>
 					<p>I am a Computer Science Enginnering Graduate from UIET, Kurukshetra University.
-						I work as a <strong itemprop="jobTitle">Freelance Web Developer</strong>.I have experience of providing end to end solutions, both on my own and in collaboration with a team.
+						I work as a <strong itemprop="jobTitle">Freelance Web Developer</strong>. I have expertise in providing end to end technical solutions to complex business applications. 
 					</p>
 					<p>I believe web to be a powerful platform to collaborate and innovate, hence most of my work is web oriented. I currently work with the following technologies - 
 						<ul class="pager pager-new">
@@ -103,6 +104,20 @@
   						</div>
     				</div>
 				</div>
+				<div class="col-sm-6 col-md-4">
+					<div class="thumbnail">
+      				<img src="supercowpowers.png" alt="SuperCowPowers">
+  						<div class="caption">
+					        <h3>http://supercowpowers.com/</h3>
+					        <p>Home site for SuperCowPowers</p>
+					        <p>Built using Python, Flask and Google App Engine</p>
+					        <p><a href="http://supercowpowers.com/" target="_blank" class="btn btn-primary" role="button">Take me there</a> </p>
+  						</div>
+    				</div>
+				</div>
+			</div>
+			<div class="row tab-pane fade" id="contactus" role="tabpanel">
+				<p>You can contact me by sending me mail at <a href="mailto:me@ankushchadda.in" target="_top">me@ankushchadda.in</a></p>
 			</div>	
 		</div>
 	</div>
@@ -114,12 +129,21 @@
     	 	e.preventDefault();
     	 	$('#works').show();
     	 	$('#home').hide();
+    	 	$('#contactus').hide();
     	 });
     	$('a[href="#home"]').click(function(e){
 
     	 	e.preventDefault();
     	 	$('#home').show();
     	 	$('#works').hide();
+    	 	$('#contactus').hide();
+    	 });
+    	$('a[href="#contactus"]').click(function(e){
+
+    	 	e.preventDefault();
+    	 	$('#home').hide();
+    	 	$('#works').hide();
+    	 	$('#contactus').show();
     	 });
   	})
 </script>
