--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<ul class="nav nav-pills" id="maintab">
 						<li role="presentation" class="active"><a href="#home" data-toggle="tab" aria-controls="home" role="tab">Home</a></li>
 						<li role="presentation"><a href="#works" data-toggle="tab"  aria-controls="works" role="tab">Works</a></li>
-						<li role="presentation"><a href="#contactus" data-toggle="tab"  aria-controls="contactus" role="tab">Contact Us</a></li>
+						<li role="presentation"><a href="#contactus" data-toggle="tab"  aria-controls="contactus" role="tab">Contact me</a></li>
 					</ul>
 				</div>
 			</div>
@@ -70,50 +70,54 @@
 					</p>
 				</div>
 			</div>
-			<div class="row tab-pane fade" id="works" role="tabpanel">
-				<div class="col-sm-6 col-md-4">
-					<div class="thumbnail">
-      				<img src="artport.png" alt="ArtPort">
-  						<div class="caption">
-					        <h3>Artport.me</h3>
-					        <p>Find all artists in one place.</p>
-					        <p>Built using Python, Django</p>
-					        <p><a href="http://artport.me" target="_blank" class="btn btn-primary" role="button">Take me there</a> </p>
-  						</div>
-    				</div>
+			<div class="container fade" role="tabpanel" id="works">
+				<div class="row tab-pane">
+					<div class="col-sm-6 col-md-4">
+						<div class="thumbnail">
+      					<img src="artport.png" alt="ArtPort">
+	  						<div class="caption">
+						        <h3>Artport.me</h3>
+						        <p>Find all artists in one place.</p>
+						        <p>Built using Python, Django</p>
+						        <p><a href="http://artport.me" target="_blank" class="btn btn-primary" role="button">Take me there</a> </p>
+	  						</div>
+    					</div>
+					</div>
+					<div class="col-sm-6 col-md-4">
+						<div class="thumbnail">
+	      				<img src="aceprofinder.png" alt="Aceprofinder">
+	  						<div class="caption">
+						        <h3>Aceprofinder.com</h3>
+						        <p>Helps Connects Contractors for Home Improvement Services</p>
+						        <p>Built using Python, Django</p>
+						        <p><a href="http://aceprofinder.com" target="_blank" class="btn btn-primary" role="button">Take me there</a> </p>
+	  						</div>
+	    				</div>
+					</div>
+					<div class="col-sm-6 col-md-4">
+						<div class="thumbnail">
+	      				<img src="gplayer.png" alt="Gplayer">
+	  						<div class="caption">
+						        <h3>Gplayer.fm</h3>
+						        <p>Listen to good music, make playlists and enjoy.</p>
+						        <p>Built using Python, Django, Backbone</p>
+						        <p><a href="http://gplayer.fm" target="_blank" class="btn btn-primary" role="button">Take me there</a> </p>
+	  						</div>
+	    				</div>
+					</div>
 				</div>
-				<div class="col-sm-6 col-md-4">
-					<div class="thumbnail">
-      				<img src="aceprofinder.png" alt="Aceprofinder">
-  						<div class="caption">
-					        <h3>Aceprofinder.com</h3>
-					        <p>Helps Connects Contractors for Home Improvement Services</p>
-					        <p>Built using Python, Django</p>
-					        <p><a href="http://aceprofinder.com" target="_blank" class="btn btn-primary" role="button">Take me there</a> </p>
-  						</div>
-    				</div>
-				</div>
-				<div class="col-sm-6 col-md-4">
-					<div class="thumbnail">
-      				<img src="gplayer.png" alt="Gplayer">
-  						<div class="caption">
-					        <h3>Gplayer.fm</h3>
-					        <p>Listen to good music, make playlists and enjoy.</p>
-					        <p>Built using Python, Django, Backbone</p>
-					        <p><a href="http://gplayer.fm" target="_blank" class="btn btn-primary" role="button">Take me there</a> </p>
-  						</div>
-    				</div>
-				</div>
-				<div class="col-sm-6 col-md-4">
-					<div class="thumbnail">
-      				<img src="supercowpowers.png" alt="SuperCowPowers">
-  						<div class="caption">
-					        <h3>http://supercowpowers.com/</h3>
-					        <p>Home site for SuperCowPowers</p>
-					        <p>Built using Python, Flask and Google App Engine</p>
-					        <p><a href="http://supercowpowers.com/" target="_blank" class="btn btn-primary" role="button">Take me there</a> </p>
-  						</div>
-    				</div>
+				<div class="row tab-pane">
+					<div class="col-sm-6 col-md-4">
+						<div class="thumbnail">
+	      				<img src="supercowpowers.png" alt="SuperCowPowers">
+	  						<div class="caption">
+						        <h3>Supercowpowers.com</h3>
+						        <p>Home site for SuperCowPowers</p>
+						        <p>Built using Python, Flask and Google App Engine</p>
+						        <p><a href="http://supercowpowers.com/" target="_blank" class="btn btn-primary" role="button">Take me there</a> </p>
+	  						</div>
+	    				</div>
+					</div>
 				</div>
 			</div>
 			<div class="row tab-pane fade" id="contactus" role="tabpanel">
