--- a/index.html
+++ b/index.html
@@ -244,7 +244,10 @@
                             </li>
                             <li>
                                 <a href="https://in.linkedin.com/in/iamkhush" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li>                            
+                            </li>
+                            <li>
+                                <a href="https://github.com" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
+                            </li>                              
                         </ul>
                     </div>
                 </div>
@@ -254,7 +257,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Ankush Chadda 2014
+                        Copyright &copy; Ankush Chadda 2015
                     </div>
                 </div>
             </div>
@@ -427,7 +430,15 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/freelancer.js"></script>
-
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-56883493-1', 'auto');
+    ga('require', 'displayfeatures');
+    ga('send', 'pageview');
+    </script>
 </body>
 
 </html>
