--- a/index.html
+++ b/index.html
@@ -201,24 +201,9 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-                    <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Message</label>
-                                <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <br>
-                        <div id="success"></div>
-                        <div class="row">
-                            <div class="form-group col-xs-12">
-                                <button type="submit" class="btn btn-success btn-lg" >Send</button><p>(This will open your default mail program.)</p>
-                            </div>
-                        </div>
-                    </form>
+                <p>If you're interested in contacting me, whether it's just to say hi, to ask for a little help, or tell me about a new project you'd like to work together, you can send me an email at <a href="mailto:me@ankushchadda.in">me@ankushchadda.in.</a></p>
+
+                I try to answer every message I get, so don’t hesitate to get in touch!
                 </div>
             </div>
         </div>
