adding new portfolio item

--- a/index.html
+++ b/index.html
@@ -139,6 +139,16 @@
                         <img src="img/portfolio/supercowpowers.png" class="img-responsive" alt="SuperCowPowers">
                     </a>
                 </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/minyadi.png" class="img-responsive" alt="Minyadi">
+                    </a>
+                </div>
             </div>
         </div>
     </section>
@@ -342,7 +352,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Gplayer</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/gplayer.png" class="img-responsive img-centered" alt="Gplayer.fm">
                             <p>A Backbone and Django based Music Player Web app. The music is mostly African. Make a playlist or listen to Guest Mixes. You embed a playlist anywhere as well</p>
@@ -377,7 +387,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>WorkBench</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/supercowpowers.png" class="img-responsive img-centered" alt="">
                             <p>Home page for an awesome Open Source Security Organisation. Currently working on an exciting security framework Called <a href="http://workbench.rtfd.org/">WorkBench</a> especially for researchers etc.</p>
@@ -391,6 +401,42 @@
                                 </li>
                                 <li>Service:
                                     <strong>Web Development</strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Minyadi</h2>
+                            <hr class="star-primary">
+                            <img src="img/portfolio/minyadi.png" class="img-responsive img-centered" alt="">
+                            <p>Minyadi is an e-commerce platform for sell handmade arts and crafts. It has an EBay style, meaning, users can sell and buy products at the same time. They can build their own shops and sell their own craft. Its a work in progress, but do go over the app, and signup.
+                            </p>
+                            <ul class="list-inline item-details">
+                                <li>Url:
+                                    <strong><a href="http://minyadi.com">SuperCowPowers</a>
+                                    </strong>
+                                </li>
+                                <li>Technologies:
+                                    <strong>Python, Django, HTML, CSS, JQuery, Heroku, Aramex, SOAP.</strong>
+                                </li>
+                                <li>Service:
+                                    <strong>Web Development, Consultation.</strong>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
