typos and grammatical mistakes

--- a/index.html
+++ b/index.html
@@ -164,13 +164,13 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <p>Namaste! My name is Ankush Chadda. from Agra, India.<br><br>
+                    <p>Namaste! My name is Ankush Chadda from Agra, India.<br><br>
 
-                    I am a Computer Science Enginnering Graduate from UIET, Kurukshetra University. I work as a Freelance Web Developer. I have expertise in providing end to end technical solutions to complex business applications.<br><br>
+                    I am a Computer Science Enginnering Graduate from UIET, Kurukshetra University. I consult and develop complex and exciting applications. I have expertise in providing end to end technical solutions to complex business applications.<br><br>
 
                     I believe web to be a powerful platform to collaborate and innovate, hence most of my work is web oriented.<br><br>
 
-                    Some of technologies I have loved working in the past are - </p>
+                    Some of technologies I love working in are - </p>
                 </div>
             </div>
             <div class="row">
@@ -320,7 +320,7 @@
                             <h2></h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/artport.png" class="img-responsive img-centered" alt="Artport.me">
-                            <p>Artport.me is a common collaboration place for all artists - Musicians, Photographers etc. With a super easy UI , it helps similar minded artists to get along communicate.</p>
+                            <p>Artport.me is a common collaboration place for all artists - Musicians, Photographers etc. With a super easy UI , it helps similar minded artists to get along and communicate.</p>
                             <ul class="list-inline item-details">
                                 <li>Url:
                                     <strong><a href="http://artport.me">Artport.me</a>
@@ -390,7 +390,7 @@
                             <h2>WorkBench</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/supercowpowers.png" class="img-responsive img-centered" alt="">
-                            <p>Home page for an awesome Open Source Security Organisation. Currently working on an exciting security framework Called <a href="http://workbench.rtfd.org/">WorkBench</a> especially for researchers etc.</p>
+                            <p>Home page for an awesome Open Source Security Research Organisation. They are currently working on an exciting security framework Called <a href="http://workbench.rtfd.org/">WorkBench</a> especially for researchers.</p>
                             <ul class="list-inline item-details">
                                 <li>Url:
                                     <strong><a href="http://supercowpowers.com">SuperCowPowers</a>
@@ -429,7 +429,7 @@
                             </p>
                             <ul class="list-inline item-details">
                                 <li>Url:
-                                    <strong><a href="http://minyadi.com">SuperCowPowers</a>
+                                    <strong><a href="http://minyadi.com">Minyadi.com</a>
                                     </strong>
                                 </li>
                                 <li>Technologies:
