added github link

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                                 <a href="https://in.linkedin.com/in/iamkhush" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
                             <li>
-                                <a href="https://github.com" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
+                                <a href="https://github.com/iamkhush" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
                             </li>                              
                         </ul>
                     </div>
