added seedthechange portfolio

--- a/index.html
+++ b/index.html
@@ -446,6 +446,41 @@
             </div>
         </div>
     </div>
+    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Seedthechange.org</h2>
+                            <hr class="star-primary">
+                            <img src="img/portfolio/seedthechange.png" class="img-responsive img-centered" alt="Seedthechange.org">
+                            <p>Seed The Change exists to help small businesses make a difference in the world by helping them plant trees as they grow.</p>
+                            <ul class="list-inline item-details">
+                                <li>Url:
+                                    <strong><a href="http://seedthechange.org">Seedthechange.org</a>
+                                    </strong>
+                                </li>
+                                <li>Technologies:
+                                    <strong>Python, Django, PHP, HTML, CSS, JQuery, Postgres</strong>
+                                </li>
+                                <li>Service:
+                                    <strong>Web Development, Consultant</strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
