added seedthechange portfolio

--- a/index.html
+++ b/index.html
@@ -149,6 +149,16 @@
                         <img src="img/portfolio/minyadi.png" class="img-responsive" alt="Minyadi">
                     </a>
                 </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/seedthechange.png" class="img-responsive" alt="Minyadi">
+                    </a>
+                </div>
             </div>
         </div>
     </section>
