added seedthechange portfolio

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>AceProfinder.com</h2>
+                            <h2>AceProfinder</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/aceprofinder.png" class="img-responsive img-centered" alt="Aceprofinder.com">
                             <p>Aceprofinder helps users find people for home imporvement. Get Quotations from people near to your home and get started. Super Easy!!</p>
@@ -327,7 +327,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2></h2>
+                            <h2>Artport</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/artport.png" class="img-responsive img-centered" alt="Artport.me">
                             <p>Artport.me is a common collaboration place for all artists - Musicians, Photographers etc. With a super easy UI , it helps similar minded artists to get along and communicate.</p>
@@ -468,7 +468,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Seedthechange.org</h2>
+                            <h2>Seed The Change</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/seedthechange.png" class="img-responsive img-centered" alt="Seedthechange.org">
                             <p>Seed The Change exists to help small businesses make a difference in the world by helping them plant trees as they grow.</p>
@@ -478,7 +478,7 @@
                                     </strong>
                                 </li>
                                 <li>Technologies:
-                                    <strong>Python, Django, PHP, HTML, CSS, JQuery, Postgres</strong>
+                                    <strong>Python, Django, PHP, HTML, CSS, JQuery, Postgres, Mysql</strong>
                                 </li>
                                 <li>Service:
                                     <strong>Web Development, Consultant</strong>
