--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Ankush Chadda">
 
     <title>Ankush Chadda's HomeSite</title>
 
@@ -68,9 +67,8 @@
                     </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
+            <iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fpages%2FAnkush-Web-Development-Solutions%2F895369540493805&amp;width&amp;layout=standard&amp;action=like&amp;show_faces=true&amp;share=true&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:80px;" allowTransparency="true"></iframe>
         </div>
-        <!-- /.container-fluid -->
     </nav>
 
     <!-- Header -->
@@ -228,7 +226,6 @@
             </div>
         </div>
     </section>
-
     <!-- Footer -->
     <footer class="text-center">
         <div class="footer-above">
