--- a/index.html
+++ b/index.html
@@ -279,6 +279,8 @@
                     <div class="col-lg-12">
                         Copyright &copy; Ankush Chadda 2015
                     </div>
+                </div>
+                <div class="row">
                     <div class="fb-like" data-href="https://www.facebook.com/pages/Ankush-Web-Development-Solutions/895369540493805" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
                 </div>
             </div>
