--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         <li>Flask</li>
                         <li>Javascript</li>
                         <li>Node.Js</li>
-                        <li>Angular JS</li>
+                        <li>Angular.jS</li>
                         <li>PhoneGap</li>
                     </ul>
                 </div>
@@ -216,7 +216,7 @@
                         <li>Mysql</li>
                         <li>Postgres</li>
                         <li>Heroku</li>
-
+                        <li>React.js</li>
                     </ul>
                 </div>
             </div>
