--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     Some of technologies I love working in are - </p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" style="font-size: 1.4em;">
                 <div class="col-lg-4 col-lg-offset-2">
                     <ul>
                         <li>Python</li>
