Changed email address

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                <p>If you're interested in contacting me, whether it's just to say hi, to ask for a little help, or tell me about a new project you'd like to work together, you can send me an email at <a href="mailto:me@ankushchadda.in">me@ankushchadda.in.</a></p>
+                <p>If you're interested in contacting me, whether it's just to say hi, to ask for a little help, or tell me about a new project you'd like to work together, you can send me an email at <a href="mailto:contact@aoswebsolutions.com">contact@aoswebsolutions.com.</a></p>
 
                 I try to answer every message I get, so don’t hesitate to get in touch!
                 </div>
