modified for AOS

--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
                         <span class="name">Ankush Chadda</span>
                         <hr class="star-light">
                         <span class="skills">Consultant - Full Stack Web Developer</span>
+                        <br>
+                        <span class="skills">Founder - <a href="http://aoswebsolutions.com">AOS Web Solutions</a></span>
                     </div>
                 </div>
             </div>
