modified for AOS

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <hr class="star-light">
                         <span class="skills">Consultant - Full Stack Web Developer</span>
                         <br>
-                        <span class="skills">Founder - <a href="http://aoswebsolutions.com" style="color:white;">AOS Web Solutions</a></span>
+                        <span class="skills">Founder - <a href="http://aoswebsolutions.com" style="color:wheat;">AOS Web Solutions</a></span>
                     </div>
                 </div>
             </div>
