--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                         <div class="modal-body">
                             <h2>AceProfinder</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/aceprofinder.png" class="img-responsive img-centered" alt="Aceprofinder.com">
+                            <img src="img/portfolio/aceprofinder.png" class="img-responsive img-centered portfolio-images" alt="Aceprofinder.com" >
                             <p>Aceprofinder helps users find people for home imporvement. Get Quotations from people near to your home and get started. Super Easy!!</p>
                             <ul class="list-inline item-details">
                                 <li>Url:
@@ -346,7 +346,7 @@
                         <div class="modal-body">
                             <h2>Artport</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/artport.png" class="img-responsive img-centered" alt="Artport.me">
+                            <img src="img/portfolio/artport.png" class="img-responsive img-centered portfolio-images" alt="Artport.me">
                             <p>Artport.me is a common collaboration place for all artists - Musicians, Photographers etc. With a super easy UI , it helps similar minded artists to get along and communicate.</p>
                             <ul class="list-inline item-details">
                                 <li>Url:
@@ -381,7 +381,7 @@
                         <div class="modal-body">
                             <h2>Gplayer</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/gplayer.png" class="img-responsive img-centered" alt="Gplayer.fm">
+                            <img src="img/portfolio/gplayer.png" class="img-responsive img-centered portfolio-images" alt="Gplayer.fm">
                             <p>A Backbone and Django based Music Player Web app. The music is mostly African. Make a playlist or listen to Guest Mixes. You embed a playlist anywhere as well</p>
                             <ul class="list-inline item-details">
                                 <li>Url:
@@ -416,7 +416,7 @@
                         <div class="modal-body">
                             <h2>WorkBench</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/supercowpowers.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/supercowpowers.png" class="img-responsive img-centered portfolio-images" alt="">
                             <p>Home page for an awesome Open Source Security Research Organisation. They are currently working on an exciting security framework Called <a href="http://workbench.rtfd.org/">WorkBench</a> especially for researchers.</p>
                             <ul class="list-inline item-details">
                                 <li>Url:
@@ -451,7 +451,7 @@
                         <div class="modal-body">
                             <h2>Minyadi</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/minyadi.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/minyadi.png" class="img-responsive img-centered portfolio-images" alt="">
                             <p>Minyadi is an e-commerce platform for sell handmade arts and crafts. It has an EBay style, meaning, users can sell and buy products at the same time. They can build their own shops and sell their own craft. Its a work in progress, but do go over the app, and signup.
                             </p>
                             <ul class="list-inline item-details">
@@ -487,7 +487,7 @@
                         <div class="modal-body">
                             <h2>Seed The Change</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/seedthechange.png" class="img-responsive img-centered" alt="Seedthechange.org">
+                            <img src="img/portfolio/seedthechange.png" class="img-responsive img-centered portfolio-images" alt="Seedthechange.org">
                             <p>Seed The Change exists to help small businesses make a difference in the world by helping them plant trees as they grow.</p>
                             <ul class="list-inline item-details">
                                 <li>Url:
